added extensions and additional tools

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -5,14 +5,8 @@
      <link rel="stylesheet" href="/css/style.css">
     <script src="/script/script.js"></script>
     <title>Matching-App</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-
-    {{>header}}
-    {{{body}}}
-
-    {{>navigation}}
-
+<h1>recommendations</h1>
 </body>
 </html>
